typestate-macro/tests/fail/unsupported_variant.stderr
error: Only unit (C-like) `enum` variants are supported.
  --> $DIR/unsupported_variant.rs:19:9
   |
19 |         Second(B)
   |         ^^^^^^^^^
